# aegis-engine

./: .gitignore  .gitreview  .yamllint  README.md  ansible.cfg  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: cicd-guide.rst  conf.py  conf.yaml  developer-guide.rst  index.rst  overview.rst  user-guide.rst
engine/: deploy.sh  package.sh
engine/config/: engine-vars  engine-vars.sh  pinned-versions  user-vars
engine/files/: engine-lib.sh
engine/infra/bifrost/: provision.sh
engine/infra/bifrost/playbooks/: bootstrap-virtual-environment.yml  create-libvirt-resources.yml  install-configure-bifrost.yml  test-connect-nodes.yml
engine/installer/kolla/: deploy.sh  install.sh
engine/installer/kolla/playbooks/: configure-installer.yml  configure-targethosts.yml  post-deployment.yml  pre-deployment.yml
engine/installer/kubespray/: deploy.sh  install.sh
engine/installer/kubespray/playbooks/: bootstrap-scenario.yml  configure-installer.yml  configure-targethosts.yml  post-deployment.yml  pre-deployment.yml
engine/playbooks/: bootstrap-configuration.yml  bootstrap-jumphost.yml  bootstrap-swconfig.yaml  package-dependencies.yaml  package.yaml  provision-local-services.yaml
engine/provisioner/bifrost/: provision.sh
engine/provisioner/heat/: provision.sh
engine/var/: global.yml  idf.yml  pdf.yml  sdf.yml  versions.yml
releasenotes/notes/: ansible-2.9.6-upgrade-49db54c786d7387c.yaml  onap-on-baremetal-34b9bb4c2a0a73b4.yaml  reno-for-releasenotes-801f11f6fac50e2c.yaml  reuse-offline-dependencies-ab42e9c09c16ea3d.yaml
(+231 files in other folders)
