[metadata]
name = engine
summary = An automation framework
description-file =
    README.md
author = Nordix Infra
author-email = infra@nordix.org
home-page = https://www.nordix.org/
classifier =
    Environment :: Cloud Infra
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
